[package]
name = "audio-waveform-mipmap"
version = "0.0.0"
authors = ["Roope Salmi <rpsalmi@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["audio", "gui", "waveform"]
categories = ["multimedia::audio"]
description = "Data structure for displaying waveforms. Experimental & WIP."
repository = "https://github.com/RustyDAW/audio-waveform-mipmap"
readme = "README.md"

[dependencies]
